--- a/Analysis/QC.ipynb
+++ b/Analysis/QC.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "99ZcR9zBX_8G"
       },
@@ -56,7 +56,7 @@
         "sx2 = torch.kron(identity, sigma_x)  # I ⊗ σₓ\n",
         "sz2 = torch.kron(identity, sigma_z)  # I ⊗ σ_z\n",
         "# Coupling\n",
-        "szx = torch.kron(sigma_z, sigma_x)  # σ_z ⊗ σ_z"
+        "szx = torch.kron(sigma_z, sigma_x)  # σ_z ⊗ σ_x"
       ]
     },
     {
